--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.8.0",
     "react-multi-carousel": "^2.8.2",
     "react-scroll": "^1.8.9",
+    "tailwind-merge": "^1.12.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
