--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/react-scroll": "^1.8.6",
+    "@vercel/analytics": "^1.0.1",
     "clsx": "^1.2.1",
     "lucide-react": "^0.125.0",
     "next": "13.2.4",
